--- a/.github/workflows/generate-rss.yml
+++ b/.github/workflows/generate-rss.yml
@@ -19,10 +19,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'npm'
+        # 移除缓存配置，避免需要 package-lock.json
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install marked gray-matter
 
     - name: Generate RSS Feed
       run: node generate-rss.js
